# photobooth

./: .gitignore  CLAUDE.md  README.md  requirements.txt  vercel.json
.claude/: settings.local.json
api/: .env.example  .env.local  .env.production  main.py  requirements.txt  test_db.py  vercel.json
api/.vercel/: project.json
api/.vercel/cache/main/: .env.example  main.py  pyproject.toml  requirements.txt  vercel.json
api/.vercel/cache/main/config/: __init__.py
api/.vercel/cache/main/lib/: __init__.py  logger.py  storage.py
api/.vercel/cache/main/middleware/: cron_auth.py
api/.vercel/cache/main/models/: __init__.py  activity_log.py  base.py  custom_frame.py  template.py  user.py
api/.vercel/cache/main/routes/: __init__.py  activity.py  admin.py  auth.py  camera.py  composition.py  frames.py  frames_upload.py  templates.py  users.py
api/config/: __init__.py
api/routes/: auth.py  camera.py  composition.py  frames.py  sharing.py  templates.py
docs/plans/: 2025-01-27-photobooth-mvp-design.md  2025-01-27-photobooth-mvp.md  2026-01-27-per-photo-frame-selection.md  (+5 more)
project_files/: config.json
scripts/: generate_frames.py
src/: __init__.py  camera_handler.py  exposure_utils.py  frame_composer.py  main.py  template_storage.py
src/pages/: __init__.py  (+5 more)
tests/: test_camera_handler.py  test_capture_display.py  test_exposure_utils.py  test_frame_composer.py  test_frame_selection.py  test_integration_a6_exposure.py  test_login_page.py  test_template_storage.py
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vercel.json
(+21 files in other folders)
